# ascfix

./: .ascfix.example.toml  .gitignore  20260206_TODO.md  ARCHITECTURE.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  LIBRARY_USAGE.md  LICENSE  PRD.md  README.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  publish.yml  test.yml
.phases/: README.md  phase-01-box-styles.md  phase-01-foundation.md  phase-02-enhanced-arrows.md  phase-02-markdown-parsing.md  phase-03-box-balancing.md  phase-03-primitive-detection.md  phase-04-connection-lines.md  phase-04-normalization.md  phase-05-integration.md  phase-05-nested-boxes.md  phase-06-finalize.md  phase-06-labels.md  phase-07-integration.md  phase-08-finalize.md
src/: cli.rs  config.rs  detector.rs  discovery.rs  fences.rs  grid.rs  inline_code.rs  io.rs  lib.rs  links.rs  lists.rs  main.rs  modes.rs  normalizer.rs  output.rs  parser.rs  primitives.rs  processor.rs  quality.rs  renderer.rs  scanner.rs  tables.rs  transformation_analysis.rs
src/detector/: arrows.rs  boxes.rs  mod.rs
tests/: README.md  data_loss_tests.rs  directory_integration_tests.rs  discovery_tests.rs  duplicate_closing_fence_tests.rs  edge_case_tests.rs  fence_tests.rs  gitignore_tests.rs  golden_diagram.md  golden_file_tests.rs  golden_roundtrip.rs  idempotence_tests.rs  inline_code_protection_tests.rs  integration_tests.rs  malformed_fixture_tests.rs  nested_box_tests.rs  quality_validation_tests.rs  text_corruption_tests.rs
tests/data/: README.md
(+125 files in other folders)
