[package]
name = "ascfix"
version = "0.5.4"
edition = "2021"
authors = ["evoludigit"]
description = "Automatic ASCII diagram repair tool for Markdown files"
license = "MIT"
repository = "https://github.com/evoludigit/ascfix"
homepage = "https://github.com/evoludigit/ascfix"
documentation = "https://docs.rs/ascfix"
readme = "README.md"
keywords = ["ascii", "diagram", "markdown", "repair"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
similar = "2.4"

[dev-dependencies]
tempfile = "3.8"
insta = "1.36"

[[bin]]
name = "ascfix"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Selective allows with justification
module_name_repetitions = "allow"  # Reason: API terms naturally repeat (e.g., BoxDetector)
unnecessary_wraps = "allow"        # Reason: main returns Result for error handling
multiple_crate_versions = "allow"  # Reason: Transitive dependency conflicts (windows-sys)
